2005-02-09  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_array_ref): Lay out array class.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_for): Wrap body in a LOOP_EXPR.

	* abi.cc (build_method_call): Wrap object in NOP_EXPR before
	finding "vtable" field.

2005-02-08  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_for): Use LABEL_EXPRs as statements.  Set
	DECL_CONTEXT on labels.
	(visit_do): Set DECL_CONTEXT on labels.
	(visit_for_enhanced): Likewise.
	(visit_for): Likewise.
	(visit_label): Likewise.
	(visit_switch_block): Likewise.
	(visit_while): Likewise.

2005-02-08  Tom Tromey  <tromey@redhat.com>

	* tree.cc (build_array_reference): Correctly handle array's type.
	* builtins.cc (map_type): Don't set TYPE_NAME for array types.
	(lay_out_class): Correctly set type of "data" field of array
	types.

2005-02-08  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_method): Create BIND_EXPR with void type.

2005-02-08  Tom Tromey  <tromey@redhat.com>

	* glue.hh: Include function.h.
	* treegen.cc (generate): Call allocate_struct_function.  Set
	function_end_locus.

2005-02-07  Tom Tromey  <tromey@redhat.com>

	* glue.hh: Include tree-dump.h.
	* treegen.cc (generate): Gimplify function.

2005-02-07  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_type_qualified_invocation): Pass 'super' to
	handle_invocation.  Handle static methods correctly.
	* builtins.cc (map_type): Assign a name to the type.
	(lay_out_class): Lay out class record type.

2005-02-06  Tom Tromey  <tromey@redhat.com>

	* treegen.hh (tree_code_generator::handles_class_p): New method.
	(tree_code_generator::needs_class_method_bodies_p): Likewise.
	(tree_code_generator::handles_resources_p): Likewise.

2005-01-30  Tom Tromey  <tromey@redhat.com>

	* decl.cc (initialize_gcc_decls): Removed old comment.
	* classobj.cc (handle_interfaces): Updated.
	* treegen.cc (generate): Updated.
	* tree.hh (tree_generator): Updated.
	* tree.cc (build_class_ref): Updated.